# AVRIS-NG_L3_invasive-species-local-test

./: .gitignore  AVIRIS-NG_L3_invasive_species.ipynb  README.md  pyproject.toml  utils.py
