[project]
name = "test-cloud-access"
version = "0.1.0"
# Not ideal to pin to a specific version, but there are not llvmlite binaries for python > 3.13
requires-python = "==3.13.5"
dependencies = [
    "datetime",
    "geopandas",
    "s3fs",
    "pandas",
    "xarray",
    "rioxarray",
    "numpy",
    "netCDF4",
    "hvplot",
    "holoviews",
    "xvec",
    "shap",
    "xgboost",
    "matplotlib",
    "earthaccess",
    "utils",
    "dask==2024.12.1",
    "shapely",
    "folium>=0.12",
    "matplotlib",
    "mapclassify",
    "h5netcdf",
    "datashader>=0.18.2",
    "jupyter-bokeh>=4.0.5",
    "geoviews>=1.14.1",
    "llvmlite>=0.44.0",
    "numba>=0.61.2",
    "ipykernel",
    "pip"
]

[tool.uv.pip]
only-binary = ["llvmlite", "numba"]
